--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,5 +1,6 @@
+
 body {
-    background-color: lightblue;
+    background-color: antiquewhite;
     text-align: center;
 }
 
@@ -10,13 +11,13 @@ h1 {
 
 h2 {
     text-align: center;
-    color: lightblue;
+    color: whitesmoke;
 }
 
 main {
     margin-right: 20px;
     margin-left: 20px;
-    padding: 20px;
+    padding: 60px 50px;
     background-color: white;
 }
 
@@ -33,11 +34,13 @@ nav ul {
 nav li {
     display: inline;
     margin-right: 25px;
+    
 }
 
 nav a {
     color: white;
     font-size: 1.5em;
+    text-decoration: none;
 }
 
 nav a:hover {
@@ -55,4 +58,20 @@ form {
 
 .border {
     border: 1px solid gray;
+}
+
+.homeContainer {
+    margin: 6%;
+}
+
+img {
+    border-radius: 30px 30px;
+}
+
+.slideOne h2 {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.slideTwo h2 {
+    background-color: rgba(0, 0, 0, 0.4);
 }
