--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,6 +1,9 @@
+html {
+    background-color: black;
+}
 
 body {
-    background-color: antiquewhite;
+    background-color: black;
     text-align: center;
 }
 
@@ -21,39 +24,31 @@ main {
     background-color: white;
 }
 
-nav {
-    background-color: cornflowerblue;
-    padding: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-}
-
-nav li {
+.leftNav {
     display: inline;
-    margin-right: 25px;
-    
-}
-
-nav a {
-    color: white;
-    font-size: 1.5em;
+    font-size: 1.1em;
     text-decoration: none;
 }
 
-nav a:hover {
-    color: lightblue;
+a.nav-link {
+    color: green;
+}
+
+
+a.nav-link:hover {
+    color: lightsalmon;
     text-decoration: none;
 }
+
+
+
 
 form {
     display: inline;
 }
 
 .inactive {
-    color: gray;
+    color: lightsalmon;
 }
 
 .border {
