--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -30,16 +30,11 @@ main {
     text-decoration: none;
 }
 
-a.nav-link {
-    color: green;
+
+
+div.me-auto.navbar-nav {
+    text-align: right;
 }
-
-
-a.nav-link:hover {
-    color: lightsalmon;
-    text-decoration: none;
-}
-
 
 
 
@@ -56,7 +51,13 @@ form {
 }
 
 .homeContainer {
-    margin: 3%;
+    margin: 0;
+    padding: 40px;
+}
+
+.homePage {
+    text-align: center;
+    padding: 5px;
 }
 
 img {
