--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -86,3 +86,9 @@ img {
     margin-right: auto;
     width: 70%;
 }
+
+.clockContainer {
+    color: gold;
+    align-items: center;
+    padding-right: 40%;
+}
