--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,41 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Abel&family=Bowlby+One&family=Roboto:ital,wght@1,100;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@1,100;1,300;1,400&display=swap');
 
-*html {
-    margin: 0%;
+main {
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-  }
+}
   
 body {
-
     height: 100vh;
-    /* max-zoom: 50%; */
-    
-  }
-  
-.App {
-    text-align: center;
-  }
+    max-width: 100vw;
+    min-height: 100vh;
+}
 
-.leftNav {
-    display: inline;
-    font-size: 1.1em;
+.App {
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+  /* Nav Link CSS */
+a.nav-link {
     text-decoration: none;
+    display: flex;
+    padding: 5px;
+    font-size: 20px;
+}
+  
+a.nav-link:hover {
+    text-shadow: 3px 3px 3px gray;
 }
 
 
 .login-container {
     font-size: 20px;
+    padding: 20px;
     font-weight: bolder;
-    color: darkgreen;
-    text-shadow: 2px 2px 2px whitesmoke;
+    color: rgb(152, 0, 0);
     font-family: 'Roboto', sans-serif;
     text-align: center;
-}
-
-
-.inactive {
-    color: lightsalmon;
+    min-width: 40vw;
 }
 
 .border {
@@ -82,81 +92,60 @@ img {
 
 /* CSS Clock */
 .clockContainer {
+    display: inline;
     color: gold;
-    padding-right: 150px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 
-
-
-  
-  /* Reister form CSS */
-  .register-form {
+/* Reister form CSS */
+.register-form {
     padding: 0px 330px 0px 330px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bolder;
-    color: darkgreen;
-    text-shadow: 2px 2px 2px whitesmoke;
+    color: black;
     font-family: 'Roboto', sans-serif;
-   
-  }
+    min-width: 40vw;
+}
   
-  .register-container {
+.register-container {
     font-weight: bolder;
     text-align: center;
     color: rgb(152, 0, 0);
     text-shadow: 2px 2px 2px whitesmoke;
     font-family: 'Roboto', sans-serif;
-  }
+}
   
-
-
-  button.btn-block{ 
-    background: #4da1ab;
+button.registerBtn {
+    background: green;
     border: 5px solid white;
-    border-radius: 8px;
+    border-radius: 10px;
     padding: 10px 20px;
     color: whitesmoke;
     font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    margin: 0 0 0 10px;
-  }
-  
-  button.btn-block:hover {
-    background-color: lightsalmon ;
-  }
-  
-  /* Header CSS */
-  .App-header {
-    min-height: 10vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(15px + 2vmin);
-    font-weight: bold;
-    text-shadow: 2px 2px 2px whitesmoke;
+    font-size: 20px;
+}
+
+button.registerBtn:disabled {
+    background-color: rgb(19, 139, 214) ;
+}
+
+button.btn-block{ 
+    background: blue;
+    border: 5px solid white;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: whitesmoke;
     font-family: 'Roboto', sans-serif;
-    padding: 20px;
-  }
+    font-size: 20px;
+   
+}
   
-  .title {
-    font-size: 75px;
-    color: darkgreen;
-    text-shadow: 3px 3px 3px whitesmoke;
-  }
-  
-  /* Nav Link CSS */
-  a.nav-link {
-    text-decoration: none;
-    padding: 5px;
-    font-size: 30px;
-  }
-  
-  a.nav-link:hover {
-    color: rgb(156, 12, 12);
-    text-shadow: 3px 3px 3px gray;
-  }
+button.btn-block:hover {
+    background-color: rgb(19, 139, 214) ;
+}
+
   
   /* Form CSS */
   .form-group {
@@ -164,7 +153,7 @@ img {
     flex-direction: column;
     padding: 10px;
     align-items: center;
-    
+    min-width: 40vw;
   }
   
   input {
@@ -175,85 +164,31 @@ img {
     padding-top: 10px;
   }
   
-  /* Dashboard CSS */
-  .dashboard-content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px;
-    margin: 20px;
-  }
-  
-   .dashboard-list{
-    align-self: flex-start;
-    min-width: 40vw;
-    
-  }
-  
-  .dashboard-container {
-    margin: 5%;
-      
-  }
-  
-
-  /* CSS Grocery List */
-  .fixed-list-container {
-    -webkit-position: -webkit-sticky;
-    position: sticky;
-    top: 5%;
-    overflow: auto;
+  /* Notes CSS */
+.noteApp {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    min-height: 10px;
-  }
-  
-  /* Recipe CSS */
-  .search-form{
-    min-height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .search-bar {
-    width: 50%;
-    border:none;
     padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0px 15px 10px rgb(63, 60, 60);
-    font-family: 'Roboto', sans-serif;
-  }
-  .search-button { 
-    background: #4da1ab;
-    border: 5px solid whitesmoke;
-    border-radius: 8px;
-    padding: 10px 20px;
-    color: whitesmoke;
-    font-family: 'Roboto', sans-serif;
-    font-size: larger;
-    margin: 0 0 0 10px;
-  }
-  .search-button:hover {
-    background-color: lightsalmon ;
-  }
+    align-items: center;
+    min-width: 40vw;
+    margin-left: 10%;
+   
+}
   
-  button.submitButton { 
-    background: #4da1ab;
-    border: 5px solid whitesmoke;
-    border-radius: 8px;
-    padding: 10px 20px;
-    color: white;
+.fixed-note-container{
+    align-self: flex-start;
+    min-width: 40vw;
+   
+}
+
+.form-control {
     font-family: 'Roboto', sans-serif;
-    font-size: larger;
-    margin: 0 0 0 10px;
-  }
+}
   
-  button.submitButton:hover {
-    background-color: lightsalmon ;
-  }
-  
-  .form-control {
+label.form-label {
+    text-align: center;
     font-family: 'Roboto', sans-serif;
-  }
-  
+    align-self: flex-start;
+    min-width: 40vw;
+
+}
